--- a/bday.css
+++ b/bday.css
@@ -136,7 +136,7 @@ body {
  }
  
  p {
-  font-family: cursive;
+  font-family: arial;
   margin: 15px 10px 10px 30px;
   color: #333;
   font-size: 35px;
