--- a/bday.css
+++ b/bday.css
@@ -159,16 +159,16 @@ body {
   outline-style: dashed;
  }
  
- .birthdayCard:active {
+ .birthdayCard:hover {
   transform: perspective(2500px) rotate(5deg);
   box-shadow: inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
  }
  
- .birthdayCard:active .cardFront {
+ .birthdayCard:hover .cardFront {
   transform: rotateY(-160deg);
  }
  
- .birthdayCard:active .happy {
+ .birthdayCard:hover .happy {
   visibility: hidden;
  }
  
